# calc

./: CMakeLists.txt  README.md  calc.pro  light.qss  mainwindow.cpp  mainwindow.h  mainwindow.ui  shunter.cpp  shunter.h  solver.cpp  solver.h
headers/: mainwindow.h  shunter.h  solver.h  symbol.h
src/: mainwindow.cpp  shunter.cpp  solver.cpp
ui/: dark.qss
